[package]
name = "topsql"
version = "0.1.0"
authors = ["dragonly <liyilongko@gmail.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.9.0"
protobuf = "2.23.0"
futures = "0.3.15"

[build-dependencies]
protoc-grpcio = "3.0.0"
